--- a/core/src/main/resources/static/css/header.css
+++ b/core/src/main/resources/static/css/header.css
@@ -496,23 +496,25 @@ header {
 .dropdown-content {
     display: none;
     width: 62px ;
-    height: 60px;
+    height: 50px;
     text-align: center;
     border-radius: 5px;
     position: absolute;
 }
 
 .dropdown-content a {
-    color: #000000;
+    color: #000000 !important;
     padding: 2px 24px;
     border-radius: 5px;
     display: block;
+    cursor: pointer;
 }
 
 .dropdown-content a:hover {
     text-decoration: none;
-    color: #ffffff;
+    color: #ffffff !important;
     background-color: #13aa57;
+    cursor: pointer;
 }
 
 .dropdown:hover .dropdown-content {
