--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -10,45 +10,45 @@
                 <div class="left-side">
                     <ul class="list-of-site-links">
                         <li>
-                            <a class="router-links" href="/management/advices">Advices</a>
+                            <a class="router-links" href="/management/advices">[[#{greenCity.page.footer.advices}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/achievement">Achievement</a>
+                            <a class="router-links" href="/management/achievement">[[#{greenCity.page.footer.achievement}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/eco-news">Eco news</a>
+                            <a class="router-links" href="/management/eco-news">[[#{greenCity.page.footer.eco.news}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/tipsandtricks">Tips & Tricks</a>
+                            <a class="router-links" href="/management/tipsandtricks">[[#{greenCity.page.footer.tips.tricks}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="#">Fact of the day</a>
+                            <a class="router-links" href="#">[[#{greenCity.page.footer.fact.of.the.day}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/users">Users</a>
+                            <a class="router-links" href="/management/users">[[#{greenCity.page.footer.users}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/habits/">Habits</a>
+                            <a class="router-links" href="/management/habits/">[[#{greenCity.page.footer.habits}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/facts">Habit Facts</a>
+                            <a class="router-links" href="/management/facts">[[#{greenCity.page.footer.habit.facts}]]</a>
                         </li>
                         <li>
                             <a class="router-links" href="/management/rating/">
-                                Rating
+                                [[#{greenCity.page.footer.facts.rating}]]
                             </a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/places/">Places</a>
+                            <a class="router-links" href="/management/places/">[[#{greenCity.page.footer.places}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/tags/">Tags</a>
+                            <a class="router-links" href="/management/tags/">[[#{greenCity.page.footer.tags}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/socialnetworkimages">Social network images</a>
+                            <a class="router-links" href="/management/socialnetworkimages">[[#{greenCity.page.footer.social.network.images}]]</a>
                         </li>
                         <li>
-                            <a class="router-links" href="/management/goals/">Goals</a>
+                            <a class="router-links-custom" href="/management/goals/">[[#{greenCity.page.footer.goals}]]</a>
                         </li>
                     </ul>
                 </div>
