--- a/core/src/main/resources/templates/core/management_eco_news.html
+++ b/core/src/main/resources/templates/core/management_eco_news.html
@@ -27,6 +27,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <script th:src="@{/management/econews/buttonsAJAX.js}"></script>
+    <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
 </head>
 
 <body onload="markCurentPageOnNav(), markOrder()">
@@ -41,17 +42,17 @@
             <div id="tab-content" style="padding-left: 5%; padding-right: 5%; width: 100%">
                 <div id="eco-news" class="row " style="margin-top: 3%; ">
                     <div class="col-sm-8">
-                        <h2 class="text-success">Manage Eco News</h2>
+                        <h2 class="text-success">[[#{greenCity.econews.page.h}]]</h2>
                     </div>
                     <div class="col-sm-4">
                         <div class="row" >
                             <div class="col-sm-12" >
                                 <div class="d-flex justify-content-end" >
                                     <a href="#addEcoNewsModal" addEcoNewsForm id="addEcoNewsModalBtn" class="btn btn-success" data-toggle="modal" th:onclick="addBtnDisabled()" > <!-- -->
-                                        <div style="width: 100px;">Add</div>
+                                        <div style="width: 100px;">[[#{greenCity.econews.page.add.eco.news}]]</div>
                                     </a>
                                     <a href="#deleteAllSelectedModal" id="btnDelete" class="btn button-delete disabled" data-toggle="modal" >
-                                        <div class="text-danger" style="width: 100px;">Delete</div>
+                                        <div class="text-danger" style="width: 100px;">[[#{greenCity.pages.delete}]]</div>
                                     </a>
                                 </div>
                             </div>
@@ -103,32 +104,32 @@
                             <thead>
                             <tr style="background-color: #afbfbd">
                                 <th>
-                                    <span onclick="orderByNameField('id')">Id
+                                    <span onclick="orderByNameField('id')">[[#{greenCity.pages.table.id}]]
                                         <i id="id-icon" style="color: #8ea59f;"></i>
                                     </span>
                                 </th>
                                 <th>
-                                    <span onclick="orderByNameField('author.name')" >Author
+                                    <span onclick="orderByNameField('author.name')" >[[#{greenCity.pages.table.author}]]
                                         <i id="author-icon" style="color: #8ea59f;"></i>
                                     </span>
                                 </th>
                                 <th>
-                                    <span onclick="orderByNameField('title')" >Title
+                                    <span onclick="orderByNameField('title')" >[[#{greenCity.pages.table.title}]]
                                         <i id="title-icon" style="color: #8ea59f;"></i>
                                     </span>
                                 </th>
                                 <th>
-                                    <span onclick="orderByNameField('text')">Text
+                                    <span onclick="orderByNameField('text')">[[#{greenCity.pages.table.text}]]
                                     <i id="text-icon"  style="color: #8ea59f;"></i>
                                     </span>
                                 </th>
-                                <th>Image</th>
-                                <th style="padding: 0;"> <span onclick="orderByNameField('creationDate')">Date
+                                <th>[[#{greenCity.pages.table.image}]]</th>
+                                <th style="padding: 0;"> <span onclick="orderByNameField('creationDate')">[[#{greenCity.pages.table.date}]]
                                     <i id="date-icon" style="color: #8ea59f;"></i>
                                 </span>
                                 </th>
                                 <th>
-                                    <span onclick="orderByNameField('tags')">Tags
+                                    <span onclick="orderByNameField('tags')">[[#{greenCity.pages.table.tags}]]
                                         <i id="tags-icon"  style="color: #8ea59f;"></i>
                                     </span>
                                 </th>
@@ -136,7 +137,7 @@
                                     <i class="fas fa-star" style="color: green"></i>
                                     <i id="likes-icon"  style="color: #8ea59f;"></i>
                                 </th>
-                                <th>Actions</th>
+                                <th>[[#{greenCity.pages.table.actions}]]</th>
                             </tr>
                             </thead>
 
@@ -221,10 +222,10 @@
                                     <td>Likes</td>
                                     <td>
                                         <a th:href="@{/management/eco-news/find/(id=${allEcoNews.getId()})}" class="edit eBtn">
-                                            <i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i>
+                                            <i class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.edit}">&#xE254;</i>
                                         </a>
                                         <a th:href="@{/management/eco-news/delete/(id=${allEcoNews.getId()})}" class="delete eDelBtn" data-toggle="modal">
-                                            <i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i>
+                                            <i class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.delete}">&#xE872;</i>
                                         </a>
                                     </td>
                                 </tr>
@@ -272,23 +273,23 @@
             <div class="modal-content">
                 <form th:action="@{management/econews}" method="post" id="addEcoNewsForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add EcoNews</h4>
+                        <h4 class="modal-title">[[#{greenCity.econews.page.add.eco.news}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <input type="hidden" class="form-control" name="id" value="-1" readonly required>
                         <div class="form-group">
-                            <label>Title</label>
+                            <label>[[#{greenCity.pages.table.title}]]</label>
                             <textarea type="text" class="form-control" name="title" required></textarea>
                             <span th:id="errorModalSavetitle" id ="errorModalSavetitle"  class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label>Text</label>
+                            <label>[[#{greenCity.pages.table.text}]]</label>
                             <textarea type="text" class="form-control" name="text" required></textarea>
                             <span th:id="errorModalSavetext" id="errorModalSavetext" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label>Tags</label>
+                            <label>[[#{greenCity.pages.table.tags}]]</label>
                                 <div style="width: 100%; display: inline-block;">
                                     <th:block th:each="allTags, iterStatus :${ecoNewsTag}">
                                         <div style="margin-right: 5%" class="custom-checkbox" >
@@ -303,18 +304,18 @@
 
                         </div>
                         <div class="form-group">
-                            <label>Source</label>
+                            <label>[[#{greenCity.pages.table.source}]]</label>
                             <textarea type="text" class="form-control" name="source"></textarea>
                         </div>
                         <div class="form-group">
-                            <label>Image</label>
-                            <input type="file" class="form-control" name="file" id="creationFile">
+                            <label>[[#{greenCity.pages.table.image}]]</label>
+                            <input type="file" class="form-control" name="file" id="creationFile" placeholder="ferf">
                             <span th:id="errorModalSavefile" class="errorSpan"></span>
                         </div>
 
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
                         <input type="submit"  class="btn btn-success btn-primary" value="Add" id="submitAddBtn">
                     </div>
                 </form>
@@ -327,48 +328,48 @@
             <div class="modal-content">
                 <form id="editEcoNewsForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Edit </h4>
+                        <h4 class="modal-title">[[#{greenCity.econews.page.edit.eco.news}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label for="id">ID</label>
+                            <label for="id">[[#{greenCity.pages.table.id}]]</label>
                             <input type="text" class="form-control" id="id" name="id" readonly required>
                             <span th:id="errorModalUpdateid" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="title">Title</label>
+                            <label for="title">[[#{greenCity.pages.table.title}]]</label>
                             <textarea type="text" class="form-control" id="title" name="title" required></textarea>
                             <span th:id="errorModalUpdatetitle" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="text">Text</label>
+                            <label for="text">[[#{greenCity.pages.table.text}]]</label>
                             <textarea type="text" class="form-control" id="text" name="text" required></textarea>
                             <span th:id="errorModalUpdatetext" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="tagsEdit">Tags</label>
+                            <label for="tagsEdit">[[#{greenCity.pages.table.tags}]]</label>
                             <div id="tagsEdit" style="width: 100%; display: inline-block;">
 
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="imagePath">Image</label>
+                            <label for="imagePath">[[#{greenCity.pages.table.image.path}]]</label>
                             <textarea type="text" class="form-control" id="imagePath" name="imagePath"></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="source">Source</label>
+                            <label for="source">[[#{greenCity.pages.table.source}]]</label>
                             <textarea type="text" class="form-control" id="source" name="source"></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="file">Image</label>
+                            <label for="file">[[#{greenCity.pages.table.image}]]</label>
                             <input type="file" class="form-control" id="file" name="file">
                             <span th:id="errorModalUpdatefile" class="errorSpan"></span>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-info btn-primary" value="Save" id="submitEditBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-info btn-primary" th:value="#{greenCity.pages.popup.save.}" id="submitEditBtn">
                     </div>
                 </form>
             </div>
@@ -381,17 +382,17 @@
             <div class="modal-content">
                 <form id="deleteEcoNewsForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete Eco News</h4>
+                        <h4 class="modal-title">[[#{greenCity.econews.page.delete.eco.news}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete that Record?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.h2}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
                         <a href="" id="deleteOneSubmit" class="btn btn-remove">
-                            <div>Delete</div></a>
+                            <div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
@@ -403,17 +404,17 @@
             <div class="modal-content">
                 <form id="">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete all selected</h4>
+                        <h4 class="modal-title">[[#{greenCity.pages.popup.delete.all.h}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete these Records?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.all.h1}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
                         <a href="" id="deleteAllSubmit" class="btn btn-danger">
-                            <div>Delete</div></a>
+                            <div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
