--- a/core/src/main/resources/templates/core/management_goals.html
+++ b/core/src/main/resources/templates/core/management_goals.html
@@ -22,6 +22,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <script th:src="@{/management/goal/buttonsAJAX.js}"></script>
+    <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
 </head>
 <body>
 <div id="header" th:insert="core/header"></div>
@@ -32,7 +33,7 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2>Manage Goal</h2>
+                            <h2>[[#{greenCity.goal.page.h}]]</h2>
                         </div>
                         <div class="col-sm-6">
                                 <span class="search-box-right">
@@ -46,10 +47,10 @@
                                 </span>
                             <a href="#addGoalModal" id="addGoalModalBtn" class="btn btn-secondary" data-toggle="modal" >
                                 <!--<i class="material-icons">&#xE147;</i>-->
-                                <div>Add New Goal</div></a>
+                                <div>[[#{greenCity.goal.page.add.goal}]]</div></a>
                             <a href="#deleteAllSelectedModal" class="btn btn-remove disabled" data-toggle="modal" id="btnDelete" >
                                 <!--<i class="material-icons">&#xE15C;</i>-->
-                                <div>Delete</div></a>
+                                <div>[[#{greenCity.pages.delete}]]</div></a>
                         </div>
                     </div>
                 </div>
@@ -62,9 +63,9 @@
                                     <label for="selectAll"></label>
                                 </span>
                         </th>
-                        <th style="width: 5%">ID</th>
-                        <th style="width: 80%">Translations</th>
-                        <th style="width: 10%">Actions</th>
+                        <th style="width: 5%">[[#{greenCity.pages.table.id}]]</th>
+                        <th style="width: 80%">[[#{greenCity.pages.table.translations}]]</th>
+                        <th style="width: 10%">[[#{greenCity.pages.table.actions}]]</th>
                     </tr>
                     </thead>
 
@@ -105,9 +106,9 @@
                                 <table class="table table-borderless m-0">
                                     <thead>
                                     <tr class="table-secondary">
-                                        <th class="py-1" style="width: 10%">Translation ID</th>
-                                        <th class="py-1" style="width: 70%">Content</th>
-                                        <th class="py-1" style="width: 5%">LanguageCode</th>
+                                        <th class="py-1" style="width: 10%">[[#{greenCity.pages.table.translation.id}]]</th>
+                                        <th class="py-1" style="width: 70%">[[#{greenCity.pages.table.content}]]</th>
+                                        <th class="py-1" style="width: 5%">[[#{greenCity.pages.table.language.code}]]</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -123,21 +124,21 @@
                                 </table>
                             </td>
                             <td>
-                                <a th:href="@{/management/goals/{id}(id=${goal.getId()})}" class="edit eBtn" ><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                <a th:href="@{/management/goals/{id}(id=${goal.getId()})}" class="delete eDelBtn" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                <a th:href="@{/management/goals/{id}(id=${goal.getId()})}" class="edit eBtn" ><i class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.edit}">&#xE254;</i></a>
+                                <a th:href="@{/management/goals/{id}(id=${goal.getId()})}" class="delete eDelBtn" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.delete}">&#xE872;</i></a>
                             </td>
                         </tr>
                         </tbody>
                     </th:block>
                 </table>
                 <div class="clearfix">
-                    <div class="hint-text">Showing <b
-                            th:text="${goals.getTotalElements()>20?20:goals.getTotalElements()}">5</b> out of <b
-                            th:text="${goals.getTotalElements()}">25</b> entries
+                    <div class="hint-text">[[#{greenCity.page.paging.show}]] <b
+                            th:text="${goals.getTotalElements()>20?20:goals.getTotalElements()}">5</b> [[#{greenCity.page.paging.out.of}]] <b
+                            th:text="${goals.getTotalElements()}">25</b> [[#{greenCity.page.paging.entries}]]
                     </div>
                     <ul class="pagination">
                         <li class="page-item" th:classappend="${goals.getCurrentPage()==0?'disabled':''}"><a
-                                th:href="@{goals(page=${goals.getCurrentPage()-1})}" class="page-link">Previous</a>
+                                th:href="@{goals(page=${goals.getCurrentPage()-1})}" class="page-link">[[#{greenCity.page.paging.previous}]]</a>
                         </li>
                         <li class="page-item" th:each="i : ${#numbers.sequence(0,goals.getTotalPages()-1)}"
                             th:classappend="${goals.getCurrentPage()==i?'active':''}"><a
@@ -145,7 +146,7 @@
                         <li class="page-item"
                             th:classappend="${goals.getCurrentPage()==goals.getTotalPages()-1?'disabled':''}"><a
                                 th:href="@{goals(page=${goals.getCurrentPage()+1})}"
-                                class="page-link">Next</a></li>
+                                class="page-link">[[#{greenCity.page.paging.next}]]</a></li>
                     </ul>
                 </div>
             </div>
@@ -157,7 +158,7 @@
             <div class="modal-content">
                 <form method="post" id="addGoalForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add Goal</h4>
+                        <h4 class="modal-title">[[#{greenCity.goal.page.add.goal}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
@@ -165,7 +166,7 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="form-group">
-                                        <label>Language code</label>
+                                        <label>[[#{greenCity.pages.popup.language.code}]]</label>
                                         <input type="text" class="form-control" th:name="${language.getCode()}"
                                                th:value="${language.getCode()}" readonly required>
                                     </div>
@@ -173,7 +174,7 @@
                                 <input type="hidden" class="form-control" th:id="id+${language.getCode()}" th:name="id+${language.getCode()}" th:value="${language.getId()}">
                                 <div class="col-9">
                                     <div class="form-group">
-                                        <label>Content</label>
+                                        <label>[[#{greenCity.pages.table.content}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:name="content+${language.getCode()}" >
                                         <span class="errorSpan"
@@ -184,8 +185,8 @@
                         </th:block>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Add" id="submitAddBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.add.}" id="submitAddBtn">
                     </div>
                 </form>
             </div>
@@ -197,7 +198,7 @@
             <div class="modal-content">
                 <form id="editGoalForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Edit Goal</h4>
+                        <h4 class="modal-title">[[#{greenCity.goal.page.edit.goal}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
@@ -210,14 +211,14 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="form-group">
-                                        <label>Language code</label>
+                                        <label>[[#{greenCity.pages.popup.language.code}]]</label>
                                         <input type="text" class="form-control" th:id="${language.getCode()}" th:name="${language.getCode()}" th:value="${language.getCode()}" readonly required>
                                     </div>
                                     <input type="hidden" class="form-control" th:id="id+${language.getCode()}" th:name="id+${language.getCode()}" th:value="${language.getId()}">
                                 </div>
                                 <div class="col-9">
                                     <div class="form-group">
-                                        <label>Content</label>
+                                        <label>[[#{greenCity.pages.table.content}]]</label>
                                         <input type="text" class="form-control eEdit" th:id="content+${language.getCode()}" th:name="content+${language.getCode()}">
                                         <span class="errorSpan"
                                               th:id="'errorModalUpdatetranslations['+${iterInfo.index}+'].content'"></span>
@@ -227,8 +228,8 @@
                         </th:block>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Save" id="submitEditBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.save.}"  id="submitEditBtn">
                     </div>
                 </form>
             </div>
@@ -240,17 +241,17 @@
             <div class="modal-content">
                 <form id="deleteGoalForm" >
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete Goal</h4>
+                        <h4 class="modal-title">[[#{greenCity.goal.page.delete.goal}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete that Record?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.h2}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
                         <a href="" id="deleteOneSubmit" class="btn btn-remove">
-                            <div>Delete</div></a>
+                            <div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
@@ -262,17 +263,17 @@
             <div class="modal-content">
                 <form id="" >
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete all selected</h4>
+                        <h4 class="modal-title">[[#{greenCity.pages.popup.delete.all.h}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete these Records?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.all.h2}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h1}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
                         <a href="" id="deleteAllSubmit" class="btn btn-remove">
-                            <div>Delete</div></a>
+                            <div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
