--- a/core/src/main/resources/templates/core/management_social_network_images.html
+++ b/core/src/main/resources/templates/core/management_social_network_images.html
@@ -22,6 +22,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <script th:src="@{/management/socialnetworkimages/buttonsAJAX.js}"></script>
+    <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
 </head>
 <body>
 <div id="header" th:insert="core/header"></div>
@@ -32,7 +33,7 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2>Manage Social network images</h2>
+                            <h2>[[#{greenCity.social.page.h}]]</h2>
                         </div>
                         <div class="col-sm-6">
                                 <span class="search-box-right">
@@ -46,9 +47,9 @@
                                 <a href="#addSocialNetworkImagesModal" id="addSocialNetworkImagesBtn" class="btn btn-secondary"
                                    data-toggle="modal">
                                     <!--<i class="material-icons">&#xE147;</i>-->
-                                    <div>Add Social Network Images News</div></a>
+                                    <div>[[#{greenCity.social.page.add.social}]]</div></a>
                                 <a href="#deleteAllSelectedModal" id="btnDelete" class="btn btn-remove disabled" data-toggle="modal">
-                                    <!--<i class="material-icons">&#xE15C;</i>--> <div>Delete</div></a>
+                                    <!--<i class="material-icons">&#xE15C;</i>--> <div>[[#{greenCity.pages.delete}]]</div></a>
                         </div>
                     </div>
                 </div>
@@ -61,10 +62,10 @@
                                     <label for="selectAll"></label>
                                 </span>
                         </th>
-                        <th>Id</th>
-                        <th>Host path</th>
-                        <th>Image path</th>
-                        <th>Actions</th>
+                        <th>[[#{greenCity.pages.table.id}]]</th>
+                        <th>[[#{greenCity.pages.table.host.path}]]</th>
+                        <th>[[#{greenCity.pages.table.image.path}]]</th>
+                        <th>[[#{greenCity.pages.table.actions}]]</th>
                     </tr>
                     </thead>
                     <th:block th:each="socialnetworkimage, iterStatus :${pageable.getPage()}">
@@ -83,10 +84,10 @@
                             <td><img th:src="${socialnetworkimage.imagePath}" th:width="100" th:height="100"> </td>
                             <td>
                                 <a th:href="@{/management/socialnetworkimages/find/(id=${socialnetworkimage.getId()})}" class="edit eBtn">
-                                    <i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i>
+                                    <i class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.edit}">&#xE254;</i>
                                 </a>
                                 <a th:href="@{/management/socialnetworkimages/delete/(id=${socialnetworkimage.getId()})}" class="delete eDelBtn" data-toggle="modal">
-                                    <i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i>
+                                    <i class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.delete}">&#xE872;</i>
                                 </a>
                             </td>
                         </tr>
@@ -94,22 +95,22 @@
                     </th:block>
                 </table>
                 <div class="clearfix">
-                    <div class="hint-text">Showing <b
-                            th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> out of <b
-                            th:text="${pageable.getTotalElements()}">25</b> entries
+                    <div class="hint-text">[[#{greenCity.page.paging.show}]] <b
+                            th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> [[#{greenCity.page.paging.out.of}]] <b
+                            th:text="${pageable.getTotalElements()}">25</b> [[#{greenCity.page.paging.entries}]]
                     </div>
                     <ul class="pagination">
-                        <!--<li class="page-item" th:classappend="${pageable.getCurrentPage()==0?'disabled':''}"><a
-                                th:href="@{/management/socialnetworkimages(page=${pageable.getCurrentPage()-1})}" class="page-link">Previous</a>
-                        </li>-->
+                        <li class="page-item" th:classappend="${pageable.getCurrentPage()==0?'disabled':''}"><a
+                                th:href="@{/management/socialnetworkimages(page=${pageable.getCurrentPage()-1})}" class="page-link">[[#{greenCity.page.paging.previous}]]</a>
+                        </li>
                         <li class="page-item" th:each="i : ${#numbers.sequence(0,pageable.getTotalPages()-1)}"
                             th:classappend="${pageable.getCurrentPage()==i?'active':''}"><a
                                 th:href="@{/management/socialnetworkimages(page=${i})}" class="page-link" th:text="${i+1}">1</a></li>
-                        <!--<li class="page-item"
+                        <li class="page-item"
                             th:classappend="${pageable.getCurrentPage()==pageable.getTotalPages()-1?'disabled':''}"><a
                                 th:href="@{/management/socialnetworkimages(page=${pageable.getCurrentPage()+1})}"
-                                class="page-link">Next</a>
-                        </li>-->
+                                class="page-link">[[#{greenCity.page.paging.next}]]</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -122,25 +123,25 @@
             <div class="modal-content">
                 <form th:action="@{management/socialnetworkimages}" method="post" id="addSocialNetworkImagesForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add Social Network Images</h4>
+                        <h4 class="modal-title">[[#{greenCity.social.page.add.social}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <input type="hidden" class="form-control" name="id" value="-1" readonly required>
                         <div class="form-group">
-                            <label>Host path</label>
+                            <label>[[#{greenCity.pages.table.host.path}]]</label>
                             <input type="text" class="form-control" name="hostPath" required>
                             <span th:id="errorModalSaveimagepath" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label>Image path</label>
+                            <label>[[#{greenCity.pages.table.image.path}]]</label>
                             <input type="file" class="form-control" name="imagePath" id="creationFile">
                             <span th:id="errorModalSavefile" class="errorSpan"></span>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Add" id="submitAddBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.add.}" id="submitAddBtn">
                     </div>
                 </form>
             </div>
@@ -153,33 +154,33 @@
             <div class="modal-content">
                 <form id="editSocialNetworkImagesForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Edit </h4>
+                        <h4 class="modal-title">[[#{greenCity.social.page.edit.social}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label for="id">ID</label>
+                            <label for="id">[[#{greenCity.pages.table.id}]]</label>
                             <input type="text" class="form-control" id="id" name="id" readonly required>
                             <span th:id="errorModalUpdateid" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="hostPath">Host path</label>
+                            <label for="hostPath">[[#{greenCity.pages.table.host.path}]]</label>
                             <input type="text" class="form-control" id="hostPath" name="hostPath" required>
                             <span th:id="errorModalUpdatehostpath" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="imagePath">Image path</label>
+                            <label for="imagePath">[[#{greenCity.pages.table.image.path}]]</label>
                             <input type="text" class="form-control" id="imagePath" name="imagePath" readonly required>
                         </div>
                         <div class="form-group">
-                            <label for="file">Image path</label>
+                            <label for="file">[[#{greenCity.pages.table.file}]]</label>
                             <input type="file" class="form-control" id="file" name="file">
                             <span th:id="errorModalUpdatefile" class="errorSpan"></span>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Save" id="submitEditBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.save.}" id="submitEditBtn">
                     </div>
                 </form>
             </div>
@@ -192,16 +193,16 @@
             <div class="modal-content">
                 <form id="deleteSocialNetworkImagesForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete Social Network Images</h4>
+                        <h4 class="modal-title">[[#{greenCity.social.page.delete.social}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete that Record?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.all.h1}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <a href="" id="deleteOneSubmit" class="btn btn-remove"><div>Delete</div></a>
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <a href="" id="deleteOneSubmit" class="btn btn-remove"><div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
@@ -213,16 +214,16 @@
             <div class="modal-content">
                 <form id="">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete all selected</h4>
+                        <h4 class="modal-title">[[#{greenCity.pages.popup.delete.all.h}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete these Records?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.all.h1}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <a href="" id="deleteAllSubmit" class="btn btn-remove">Delete</a>
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <a href="" id="deleteAllSubmit" class="btn btn-remove">[[#{greenCity.pages.delete}]]</a>
                     </div>
                 </form>
             </div>
