--- a/core/src/main/resources/templates/core/management_tags.html
+++ b/core/src/main/resources/templates/core/management_tags.html
@@ -22,6 +22,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <script th:src="@{/management/tag/buttonsAJAX.js}"></script>
+    <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
 </head>
 <body>
 <div id="header" th:insert="core/header"></div>
@@ -32,7 +33,7 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2>Manage Tags</h2>
+                            <h2>[[#{greenCity.tags.page.h}]]</h2>
                         </div>
                         <div class="col-sm-6">
                                 <span class="search-box-right">
@@ -46,9 +47,9 @@
                                 </span>
                             <a class="btn btn-secondary" data-toggle="modal" href="#addTagModal"
                                id="addTagModalBtn">
-                                <div>Add Tag</div></a>
+                                <div>[[#{greenCity.places.page.add.tag}]]</div></a>
                             <a class="btn btn-remove disabled" data-toggle="modal" id="btnDelete" href="#deleteAllSelectedModal">
-                                <div>Delete</div></a>
+                                <div>[[#{greenCity.pages.delete}]]</div></a>
                         </div>
                     </div>
                 </div>
@@ -61,10 +62,10 @@
                                     <label for="selectAll"></label>
                                 </span>
                         </th>
-                        <th>ID</th>
-                        <th>Type</th>
-                        <th>Translations</th>
-                        <th>Actions</th>
+                        <th>[[#{greenCity.pages.table.id}]]</th>
+                        <th>[[#{greenCity.pages.table.type}]]</th>
+                        <th>[[#{greenCity.pages.table.translations}]]</th>
+                        <th>[[#{greenCity.pages.table.actions}]]</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -112,9 +113,9 @@
                                 <table class="table table-borderless m-0">
                                     <thead>
                                     <tr class="table-secondary">
-                                        <th class="py-1">TranslationID</th>
-                                        <th class="py-1">Name</th>
-                                        <th class="py-1">LanguageCode</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.translation.id}]]</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.name}]]</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.language.code}]]</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -131,9 +132,9 @@
                             </td>
                             <td>
                                 <a class="edit eBtn" th:href="@{/management/tags/{id}(id=${tag.getId()})}"><i
-                                        class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                        class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.edit}">&#xE254;</i></a>
                                 <a class="delete eDelBtn" data-toggle="modal"
-                                   th:href="@{/management/tags/{id}(id=${tag.getId()})}"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                   th:href="@{/management/tags/{id}(id=${tag.getId()})}"><i class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.delete}">&#xE872;</i></a>
                             </td>
                         </tr>
                         </tbody>
@@ -141,12 +142,12 @@
                 </table>
                 <div class="clearfix" th:if="${tags.getPage().size() ne 0}">
                     <div class="hint-text">
-                        Showing
+                        [[#{greenCity.page.paging.show}]]
                         <b th:text="${tags.getCurrentPage() eq 0 ? '1 -' : (tags.isHasNext() ? tags.getPage().size() * tags.getCurrentPage() : tags.getTotalElements() - tags.getPage().size()) + 1 + ' - '}"></b>
                         <b th:text="${tags.getCurrentPage() eq 0 ? tags.getPage().size() : (tags.isHasNext() ? tags.getPage().size() * (tags.getCurrentPage() + 1) : tags.getTotalElements())}">*</b>
-                        out of
+                        [[#{greenCity.page.paging.out.of}]]
                         <b th:text="${tags.getTotalElements()}"></b>
-                        entries
+                        [[#{greenCity.page.paging.entries}]]
                     </div>
                     <ul class="pagination">
 
@@ -184,12 +185,12 @@
             <div class="modal-content">
                 <form method="post" id="addTagForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add Tag</h4>
+                        <h4 class="modal-title">[[#{greenCity.places.page.add.tag}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label>Type</label>
+                            <label> [[#{greenCity.pages.table.type}]]</label>
                             <label>
                                 <select name="tagType" class="form-control">
                                     <option>ECO_NEWS</option>
@@ -203,7 +204,7 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="form-group">
-                                        <label>Language code</label>
+                                        <label> [[#{greenCity.pages.popup.language.code}]]</label>
                                         <input type="text" class="form-control" th:name="${language.getCode()}"
                                                th:value="${language.getCode()}" readonly required>
                                     </div>
@@ -211,7 +212,7 @@
                                 <input type="hidden" class="form-control" th:id="id+${language.getCode()}" th:name="id+${language.getCode()}" th:value="${language.getId()}">
                                 <div class="col-9">
                                     <div class="form-group">
-                                        <label>Name</label>
+                                        <label>[[#{greenCity.pages.table.name}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:name="name+${'_' + language.getId()+'_'}+${language.getCode()}">
                                         <span class="errorSpan"
@@ -222,8 +223,8 @@
                         </th:block>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Add" id="submitAddBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.add.}" id="submitAddBtn">
                     </div>
                 </form>
             </div>
@@ -234,16 +235,16 @@
             <div class="modal-content">
                 <form method="post" id="editTagForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Edit Tag</h4>
+                        <h4 class="modal-title">[[#{greenCity.places.page.edit.tag}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label>ID</label>
+                            <label>[[#{greenCity.pages.table.id}]]</label>
                             <label for="id"></label><input class="form-control" id="id" name="id" readonly required type="text">
                         </div>
                         <div class="form-group">
-                            <label>Type</label>
+                            <label>[[#{greenCity.pages.table.type}]]</label>
                             <label>
                                 <select name="tagType" class="form-control">
                                     <option>ECO_NEWS</option>
@@ -257,7 +258,7 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="form-group">
-                                        <label>Language code</label>
+                                        <label>[[#{greenCity.pages.popup.language.code}]]</label>
                                         <input type="text" class="form-control" th:name="${language.getCode()}"
                                                th:value="${language.getCode()}" readonly required>
                                     </div>
@@ -265,7 +266,7 @@
                                 <input type="hidden" class="form-control" th:id="id+${language.getCode()}" th:name="id+${language.getCode()}" th:value="${language.getId()}">
                                 <div class="col-9">
                                     <div class="form-group">
-                                        <label>Name</label>
+                                        <label>[[#{greenCity.pages.table.name}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:id="name+${'_' + language.getId()+'_'}+${language.getCode()}"
                                                th:name="name+${'_' + language.getId()+'_'}+${language.getCode()}">
@@ -277,8 +278,8 @@
                         </th:block>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Add" id="submitEditBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.save.}" id="submitEditBtn">
                     </div>
                 </form>
             </div>
@@ -290,17 +291,17 @@
             <div class="modal-content">
                 <form id="deleteTagForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete Tag</h4>
+                        <h4 class="modal-title">[[#{greenCity.places.page.delete.tag}]]</h4>
                         <button aria-hidden="true" class="close" data-dismiss="modal" type="button">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete that Record?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.h2}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" value="Cancel">
+                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" th:value="#{greenCity.pages.popup.cancel.}">
                         <a class="btn btn-remove" href="" id="deleteOneSubmit">
-                            <div>Delete</div></a>
+                            <div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
@@ -312,17 +313,17 @@
             <div class="modal-content">
                 <form id="">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete all selected</h4>
+                        <h4 class="modal-title">[[#{greenCity.pages.popup.delete.all.h}]]</h4>
                         <button aria-hidden="true" class="close" data-dismiss="modal" type="button">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete these Records?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.all.h1}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" value="Cancel">
+                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" th:value="#{greenCity.pages.popup.cancel.}">
                         <a class="btn btn-danger" href="" id="deleteAllSubmit">
-                            <div>Delete</div></a>
+                            <div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
