--- a/core/src/main/resources/templates/core/management_tips_and_tricks.html
+++ b/core/src/main/resources/templates/core/management_tips_and_tricks.html
@@ -27,6 +27,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <script th:src="@{/management/tipsandtricks/buttonsAJAX.js}"></script>
+    <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2>Manage <b>Tips&tricks</b></h2>
+                            <h2>[[#{greenCity.tips.tricks.page.h}]]</b></h2>
                         </div>
                         <div class="col-sm-6">
                             <span class="search-box-right">
@@ -51,10 +52,10 @@
                                 </span>
                             <a href="#addTipsAndTricksModal" id="addTipsAndTricksModalBtn" class="btn btn-secondary"
                                data-toggle="modal">
-                                <div>Add New Tips&Tricks</div>
+                                <div>[[#{greenCity.tips.tricks.page.add.tips.tricks}]]</div>
                             </a>
                             <a href="#deleteAllSelectedModal" id="btnDelete" class="btn btn-remove disabled" data-toggle="modal">
-                                <div>Delete</div>
+                                <div>[[#{greenCity.pages.delete}]]</div>
                             </a>
                         </div>
                     </div>
@@ -68,12 +69,12 @@
                                     <label for="selectAll"></label>
                                 </span>
                         </th>
-                        <th>id</th>
-                        <th>title translations</th>
-                        <th>author</th>
-                        <th>imagePath</th>
-                        <th>creationDate</th>
-                        <th>Actions</th>
+                        <th>[[#{greenCity.pages.table.id}]]</th>
+                        <th>[[#{greenCity.pages.table.title.translations}]]</th>
+                        <th>[[#{greenCity.pages.table.author}]]</th>
+                        <th>[[#{greenCity.pages.table.image.path}]]</th>
+                        <th>[[#{greenCity.pages.table.creation.date}]]</th>
+                        <th>[[#{greenCity.pages.table.actions}]]</th>
                     </tr>
                     </thead>
                     <form method="POST" action="/management/tipsandtricks" id="searchForm" onsubmit="applyFilters()">
@@ -134,8 +135,8 @@
                                 <table class="table table-borderless m-0">
                                     <thead>
                                     <tr class="table-secondary">
-                                        <th class="py-1">Content</th>
-                                        <th class="py-1">LanguageCode</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.content}]]</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.language.code}]]</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -156,24 +157,24 @@
                             <td>
                                 <a th:href="@{/management/tipsandtricks/find/(id=${tipsAndTricks.getId()})}"
                                    class="edit eBtn"><i
-                                        class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                        class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.edit}">&#xE254;</i></a>
                                 <a th:href="@{/management/tipsandtricks/(id=${tipsAndTricks.getId()})}"
                                    class="delete eDelBtn"
                                    data-toggle="modal"><i class="material-icons" data-toggle="tooltip"
-                                                          title="Delete">&#xE872;</i></a>
+                                                          th:title="#{greenCity.pages.delete}">&#xE872;</i></a>
                             </td>
                         </tr>
                         </tbody>
                     </th:block>
                 </table>
                 <div class="clearfix">
-                    <div class="hint-text">Showing <b
-                            th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> out of <b
-                            th:text="${pageable.getTotalElements()}">25</b> entries
+                    <div class="hint-text">[[#{greenCity.page.paging.show}]] <b
+                            th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> [[#{greenCity.page.paging.out.of}]] <b
+                            th:text="${pageable.getTotalElements()}">25</b> [[#{greenCity.page.paging.entries}]]
                     </div>
                     <ul class="pagination">
                         <li class="page-item" th:classappend="${pageable.getCurrentPage()==0?'disabled':''}"><a
-                                th:href="@{tipsandtricks(page=${pageable.getCurrentPage()-1})}" class="page-link">Previous</a>
+                                th:href="@{tipsandtricks(page=${pageable.getCurrentPage()-1})}" class="page-link">[[#{greenCity.page.paging.previous}]]</a>
                         </li>
                         <li class="page-item" th:each="i : ${#numbers.sequence(0,pageable.getTotalPages()-1)}"
                             th:classappend="${pageable.getCurrentPage()==i?'active':''}"><a
@@ -181,7 +182,7 @@
                         <li class="page-item"
                             th:classappend="${pageable.getCurrentPage()==pageable.getTotalPages()-1?'disabled':''}"><a
                                 th:href="@{tipsandtricks(page=${pageable.getCurrentPage()+1})}"
-                                class="page-link">Next</a></li>
+                                class="page-link">[[#{greenCity.page.paging.next}]]</a></li>
                     </ul>
                 </div>
             </div>
@@ -193,7 +194,7 @@
             <div class="modal-content">
                 <form th:action="@{management/tipsandtricks/save}" method="post" id="addTipsAndTricksForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add Tips&Tricks</h4>
+                        <h4 class="modal-title">[[#{greenCity.tips.tricks.page.add.tips.tricks}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
@@ -229,24 +230,24 @@
                             </th:block>
                         </div>
                         <div class="form-group">
-                            <label>Tags</label>
+                            <label>[[#{greenCity.pages.table.tags}]]</label>
                             <input type="text" class="form-control" name="tags" required>
                             <span th:id="errorModalSavetags" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label>Source</label>
+                            <label>[[#{greenCity.pages.table.source}]]</label>
                             <input type="text" class="form-control" name="source">
                         </div>
                         <div class="form-group">
-                            <label>Image</label>
+                            <label>[[#{greenCity.pages.table.image}]]</label>
                             <input type="file" class="form-control" name="file" id="creationFile">
                             <span th:id="errorModalSavefile" class="errorSpan"></span>
                         </div>
 
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success" value="Add" id="submitAddBtn">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success" th:value="#{greenCity.pages.popup.add.}" id="submitAddBtn">
                     </div>
                 </form>
             </div>
@@ -258,12 +259,12 @@
             <div class="modal-content">
                 <form id="editTipsAndTricksForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Edit Tips&Tricks</h4>
+                        <h4 class="modal-title">[[#{greenCity.tips.tricks.page.edit.tips.tricks}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label for="id">ID</label>
+                            <label for="id">[[#{greenCity.pages.table.id}]]</label>
                             <input type="text" class="form-control" id="id" name="id" readonly required>
                             <span th:id="errorModalUpdateid" class="errorSpan"></span>
                         </div>
@@ -298,34 +299,34 @@
                             </th:block>
                         </div>
                         <div class="form-group">
-                            <label for="tags">Tags</label>
+                            <label for="tags">[[#{greenCity.pages.table.tags}]]</label>
                             <input type="text" class="form-control" id="tags" name="tags" required>
                             <span th:id="errorModalUpdatetags" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="authorName">Author</label>
+                            <label for="authorName">[[#{greenCity.pages.table.author}]]</label>
                             <input type="email" class="form-control" id="authorName" name="authorName" readonly
                                    required>
                             <span th:id="errorModalUpdateauthorName" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="imagePath">Image</label>
+                            <label for="imagePath">[[#{greenCity.pages.table.image.path}]]</label>
                             <input type="text" class="form-control" id="imagePath" name="imagePath">
                         </div>
                         <div class="form-group">
-                            <label for="source">Source</label>
+                            <label for="source">[[#{greenCity.pages.table.source}]]</label>
                             <input type="text" class="form-control" id="source" name="source">
                         </div>
                         <div class="form-group">
-                            <label for="file">Image</label>
+                            <label for="file">[[#{greenCity.pages.table.image}]]</label>
                             <input type="file" class="form-control" id="file" name="file">
                             <span th:id="errorModalUpdatefile" class="errorSpan"></span>
                         </div>
 
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-info" value="Save" id="submitEditBtn">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-info" th:value="#{greenCity.pages.popup.save.}" id="submitEditBtn">
                     </div>
                 </form>
             </div>
@@ -337,16 +338,16 @@
             <div class="modal-content">
                 <form id="deleteTipsAndTricksForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete Tips&Tricks</h4>
+                        <h4 class="modal-title">[[#{greenCity.tips.tricks.page.delete.tips.tricks}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete that Record?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.h2}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <a href="" id="deleteOneSubmit" class="btn btn-danger">Delete</a>
+                        <input type="button" class="btn btn-default" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <a href="" id="deleteOneSubmit" class="btn btn-danger">[[#{greenCity.pages.delete}]]</a>
                     </div>
                 </form>
             </div>
@@ -358,16 +359,16 @@
             <div class="modal-content">
                 <form id="">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete all selected</h4>
+                        <h4 class="modal-title">[[#{greenCity.pages.popup.delete.all.h}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete these Records?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.all.h1}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <a href="" id="deleteAllSubmit" class="btn btn-danger">Delete</a>
+                        <input type="button" class="btn btn-default" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <a href="" id="deleteAllSubmit" class="btn btn-danger">[[#{greenCity.pages.delete}]]</a>
                     </div>
                 </form>
             </div>
