--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -24,6 +24,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <script th:src="@{/management/habits/buttonsAJAX.js}"></script>
+    <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
 </head>
 
 <body>
@@ -35,7 +36,7 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2 style="color: white">Manage Habits </h2>
+                            <h2>[[#{greenCity.habit.page.h}]]</h2>
                         </div>
                         <div class="col-sm-6">
                                 <span class="search-box-right">
@@ -51,10 +52,10 @@
                             <a href="#addHabitModal" id="addHabitModalBtn" class="btn btn-secondary"
                                data-toggle="modal">
                                 <!--<i class="material-icons">&#xE147;</i>-->
-                                <div>Add New Habit</div></a>
+                                <div>[[#{greenCity.habit.page.add.habit}]]</div></a>
                             <a href="#deleteAllSelectedModal" class="btn btn-remove disabled" id="btnDelete" data-toggle="modal">
                                 <!--<i class="material-icons">&#xE15C;</i>-->
-                                <div>Delete</div></a>
+                                <div>[[#{greenCity.pages.delete}]]</div></a>
                         </div>
                     </div>
                 </div>
@@ -67,10 +68,10 @@
                                     <label for="selectAll"></label>
                                 </span>
                         </th>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Translations</th>
-                        <th>Actions</th>
+                        <th>[[#{greenCity.pages.table.habit.id}]]</th>
+                        <th>[[#{greenCity.pages.table.name}]]</th>
+                        <th>[[#{greenCity.pages.table.translations}]]</th>
+                        <th>[[#{greenCity.pages.table.actions}]]</th>
                     </tr>
                     </thead>
                     <th:block th:each="habit, iterStatus :${pageable.getPage()}">
@@ -92,11 +93,11 @@
                                 <table class="table table-borderless m-0">
                                     <thead>
                                     <tr class="table-secondary">
-                                        <th class="py-1">ID</th>
-                                        <th class="py-1" style="width:50%">Name</th>
-                                        <th class="py-1">Habit Item</th>
-                                        <th class="py-1">Description</th>
-                                        <th class="py-1">LanguageCode</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.habit.id}]]</th>
+                                        <th class="py-1" style="width:50%">[[#{greenCity.pages.table.name}]]</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.habit.item}]]</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.description}]]</th>
+                                        <th class="py-1">[[#{greenCity.pages.table.language.code}]]</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -115,23 +116,23 @@
                             </td>
                             <td>
                                 <a th:href="@{/management/habits/find/(id=${habit.id})}" class="edit eBtn"><i
-                                        class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                        class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.edit}">&#xE254;</i></a>
                                 <a th:href="@{/management/habits/delete/(id=${habit.id})}"
                                    class="delete eDelBtn" data-toggle="modal"><i class="material-icons"
-                                                                                 data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                                                                 data-toggle="tooltip" th:title="#{greenCity.pages.delete}">&#xE872;</i></a>
                             </td>
                         </tr>
                         </tbody>
                     </th:block>
                 </table>
                 <div class="clearfix">
-                    <div class="hint-text">Showing <b
-                            th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> out of <b
-                            th:text="${pageable.getTotalElements()}">25</b> entries
+                    <div class="hint-text">[[#{greenCity.page.paging.show}]] <b
+                            th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> [[#{greenCity.page.paging.out.of}]] <b
+                            th:text="${pageable.getTotalElements()}">25</b> [[#{greenCity.page.paging.entries}]]
                     </div>
                     <ul class="pagination">
                         <li class="page-item" th:classappend="${pageable.getCurrentPage()==0?'disabled':''}"><a
-                                th:href="@{habit(page=${pageable.getCurrentPage()-1})}" class="page-link">Previous</a>
+                                th:href="@{habit(page=${pageable.getCurrentPage()-1})}" class="page-link">[[#{greenCity.page.paging.previous}]]</a>
                         </li>
                         <li class="page-item" th:each="i : ${#numbers.sequence(0,pageable.getTotalPages()-1)}"
                             th:classappend="${pageable.getCurrentPage()==i?'active':''}"><a
@@ -139,7 +140,7 @@
                         <li class="page-item"
                             th:classappend="${pageable.getCurrentPage()==pageable.getTotalPages()-1?'disabled':''}"><a
                                 th:href="@{habit(page=${pageable.getCurrentPage()+1})}"
-                                class="page-link">Next</a></li>
+                                class="page-link">[[#{greenCity.page.paging.next}]]</a></li>
                     </ul>
                 </div>
             </div>
@@ -151,18 +152,18 @@
             <div class="modal-content">
                 <form th:action="@{management/habits/save}" method="post" id="addHabitForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Add Habit</h4>
+                        <h4 class="modal-title">[[#{greenCity.habit.page.add.habit}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <input type="hidden" class="form-control" name="id" value="0" readonly required>
                         <div class="form-group">
-                            <label>Image path</label>
+                            <label>[[#{greenCity.pages.table.image.path}]]</label>
                             <input type="text" class="form-control" name="image" required>
                             <span th:id="errorModalAddHabitImage" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="file">Image upload</label>
+                            <label for="file">[[#{greenCity.pages.table.image.upload}]]</label>
                             <input type="file" class="form-control" id="fileCreate" name="file">
                             <span th:id="errorModalAddfile" class="errorSpan"></span>
                         </div>
@@ -170,14 +171,14 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="form-group">
-                                        <label>Lang</label>
+                                        <label>[[#{greenCity.pages.table.lang}]]</label>
                                         <input type="text" class="form-control" th:name="${language.getCode()}"
                                                th:value="${language.getCode()}" readonly required>
                                     </div>
                                 </div>
                                 <div class="col-9">
                                     <div class="form-group">
-                                        <label>Name</label>
+                                        <label>[[#{greenCity.pages.table.name}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:name="contentName+${language.getCode()}">
                                         <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].name'"
@@ -188,7 +189,7 @@
                             <div class="row">
                                 <div class="col-6">
                                     <div class="form-group">
-                                        <label>Habit item</label>
+                                        <label>[[#{greenCity.pages.table.habit.item}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:name="contentHabItem+${language.getCode()}">
                                         <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].habitItem'"
@@ -197,7 +198,7 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="form-group">
-                                        <label>Description</label>
+                                        <label>[[#{greenCity.pages.table.description}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:name="contentDescr+${language.getCode()}">
                                         <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].description'"
@@ -208,8 +209,8 @@
                         </th:block>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Add" id="submitAddBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.add.}" id="submitAddBtn">
                     </div>
                 </form>
             </div>
@@ -221,22 +222,22 @@
             <div class="modal-content">
                 <form id="editHabitForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Edit Habit</h4>
+                        <h4 class="modal-title">[[#{greenCity.habit.page.edit.habit}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label>ID</label>
+                            <label>[[#{greenCity.pages.table.id}]]</label>
                             <input type="text" class="form-control" id="id" name="id" readonly required>
                             <span th:id="errorModalUpdateid" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label>Image path</label>
+                            <label>[[#{greenCity.pages.table.image.path}]]</label>
                             <input type="text" class="form-control" id="image" name="image" required>
                             <span th:id="errorModalUpdateHabitImage" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
-                            <label for="file">Image upload</label>
+                            <label for="file">[[#{greenCity.pages.table.image.upload}]]</label>
                             <input type="file" class="form-control" id="file" name="file">
                             <span th:id="errorModalUpdatefile" class="errorSpan"></span>
                         </div>
@@ -244,7 +245,7 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="form-group">
-                                        <label>Lang</label>
+                                        <label>[[#{greenCity.pages.table.lang}]]</label>
                                         <input type="text" class="form-control" th:id="${language.getCode()}"
                                                th:name="${language.getCode()}" th:value="${language.getCode()}" readonly
                                                required>
@@ -252,7 +253,7 @@
                                 </div>
                                 <div class="col-9">
                                     <div class="form-group">
-                                        <label>Name</label>
+                                        <label>[[#{greenCity.pages.table.name}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:id="contentName+${language.getCode()}"
                                                th:name="contentName+${language.getCode()}">
@@ -264,7 +265,7 @@
                             <div class="row">
                                 <div class="col-6">
                                     <div class="form-group">
-                                        <label>Habit item</label>
+                                        <label>[[#{greenCity.pages.table.habit.item}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:id="contentHabItem+${language.getCode()}"
                                                th:name="contentHabItem+${language.getCode()}">
@@ -274,7 +275,7 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="form-group">
-                                        <label>Description</label>
+                                        <label>[[#{greenCity.pages.table.description}]]</label>
                                         <input type="text" class="form-control eEdit"
                                                th:id="contentDescr+${language.getCode()}"
                                                th:name="contentDescr+${language.getCode()}">
@@ -286,8 +287,8 @@
                         </th:block>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success btn-primary" value="Save" id="submitEditBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" th:value="#{greenCity.pages.popup.cancel.}">
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.save.}" id="submitEditBtn">
                     </div>
                 </form>
             </div>
@@ -299,17 +300,17 @@
             <div class="modal-content">
                 <form id="deleteHabitForm">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete Habit</h4>
+                        <h4 class="modal-title">[[#{greenCity.habit.page.delete.habit}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete that Record?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.h2}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" value="Cancel">
+                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" th:value="#{greenCity.pages.popup.cancel.}">
                         <a class="btn btn-remove" href="" id="deleteOneSubmit">
-                            <div>Delete</div></a>
+                            <div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
@@ -321,17 +322,17 @@
             <div class="modal-content">
                 <form id="">
                     <div class="modal-header">
-                        <h4 class="modal-title">Delete all selected</h4>
+                        <h4 class="modal-title">[[#{greenCity.pages.popup.delete.all.h}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete these Records?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                        <p>[[#{greenCity.pages.popup.delete.all.h1}]]</p>
+                        <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" value="Cancel">
+                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" th:value="#{greenCity.pages.popup.cancel.}">
                         <a class="btn btn-danger" href="" id="deleteAllSubmit">
-                            <div>Delete</div></a>
+                            <div>[[#{greenCity.pages.delete}]]</div></a>
                     </div>
                 </form>
             </div>
